# bkhAsyn RELEASE_NOTES
====================================

R0.4.6  M. Dunning - 2023-10-20
    - ai_convert_autosave.template: update autosave fields

R0.4.5  G. Brown - 2023-01-30
      - Add templates with autosave, based on the *_simple templates

R0.4.4  M. Dunning - 2022-08-23
    - ai_convert_autosave.template: add MS flag

R0.4.3  M. Dunning - 2022-04-19
    - ao_convert_autosave.template: update autosave fields

R0.4.2  egumtow - 2022-02-29
    - Updated to asyn/R4.39-1.0.1 and modbus/R3.2-1.0.1.

R0.4.1  M. Dunning - 2021-10-11
    - Add ao_convert_autosave.template.  This is for DAC control with optional polynomial conversion.

R0.4.0  M. Dunning - 2021-04-29
    - Flatten src dir structure and remove drvBkhErr which is not used.  
            This change is not backward compatible.  IOC apps must update their 
            src/Makefile.  See example IOC.
    - drvBkhAMot: replace linked list with findAsynPortDriver()

R0.3.0  M. Dunning - 2021-04-14
    - drvMBus: inherit from drvModbusAsyn and remove custom modbus code.  
            Now drvMBus is an asynPortDriver and can call modbus and 
            asynPortDriver methods directly.  This requires modbus version >= R3.0.
    - Fix issue with data leakage between ports when running multiple 
            couplers in a single ioc
    - Use findAsynPortDriver() instead of linked list to return pointer to drvMBus driver
    - Reorganize ioc shell config files and constructors to be more intuitive and match other drivers.
            This requires changes to st.cmd files, so THIS CHANGE IS NOT BACKWARD COMPATIBLE.
    - Remove histogram code.  This can be done with the modbus module by loading
            the statistics template.
    - Remove custom locking code, use asynPortDriver lock() and unlock() instead.
    - Fix readbacks of coupler read/write registers, including watchdog timeout
    - Set all channels/params to invalid severity when there is a communication error