@@ -3,32 +3,41 @@ include $(TOP)/configure/CONFIG
 
 DB += drvbkh.db
 DB += readwrite.db
+DB += bkhADrv.db
+DB += bkhAErr.db
 DB += b9000.db
 DB += bk9000.db
 DB += b9000RRegs.db
 DB += b9000WRegs.db
-DB += bkhADrv.db
-DB += bkhAErr.db
+
 DB += bkhAi.db
 DB += bkhAi_simple.db
 DB += bkhAi_autosave.db
+
 DB += bkhAo.db
 DB += bkhAo_simple.db
 DB += bkhAo_autosave.db
+
 DB += bkhBi.db
 DB += bkhBi_simple.db
 DB += bkhBi_autosave.db
+
 DB += bkhBo.db
 DB += bkhBo_simple.db
 DB += bkhBo_autosave.db
+
 DB += bkhTemp.db
 DB += bkhTemp_simple.db
+DB += bkhTemp_autosave.db
+
 DB += bkhLi.db
 DB += bkhLo.db
+
 DB += bi_convert.template
 DB += bo_convert.template
 DB += ai_convert.template
 DB += ai_convert_autosave.template
+DB += ai_convert_10th_autosave.template
 DB += ao_convert_autosave.template
 
 include $(TOP)/configure/RULES
